# CPP_Pipelines

./: .gitignore  CMakeLists.txt  ClassDiagram.vsdx  LICENSE  PipeQueue Interfaces.vsdx  README.MD  RunMe.sh  SystemDiagrams.vsdx  ~$$PipeQueue Interfaces.~vsdx  ~$$SystemDiagrams.~vsdx
Appendix/: Class_and_sequence_diagram.vsdx
Example/: CMakeLists.txt
Example/Books/: README.MD
Example/include/: MapWriter.hpp
Example/source/: main.cpp
Pipelines/: CMakeLists.txt
Pipelines/include/: PipeQueue.hpp  TaskFactory.hpp
Pipelines/source/: PipeQueue.cpp  TaskFactory.cpp
Test/: CMakeLists.txt  runTests  tests.cpp
Test/Tests/: ClassHeader.h  tests.cpp
Test/Tests/PipeQueue/: PipeQueueAssignmentEqualTo.h  PipeQueueAssignmentInOut.h  PipeQueueAssignmentLesser.h  PipeQueueAssignmentMoveCopy.h  PipeQueueAssinment.h  PipeQueueBack.h  PipeQueueClear.h  PipeQueueEOF.h  PipeQueueEmpty.h  PipeQueueFront.h  PipeQueueInit.h  PipeQueuePop.h  PipeQueuePush.h  PipeQueueSize.h  PipeQueueSwap.h  PipeQueueTests.h
Test/Tests/TaskFactory/: TaskFactoryFlow.h  TaskFactoryStartAsyncTask.h  TaskFactoryTests.h  TaskFactoryWaitAll.h
